--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,18 @@ project(hospitality)
 find_package(catkin REQUIRED roscpp rospy std_msgs geometry_msgs sensor_msgs message_generation)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  PointFloor.msg
+)
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  FindRoute.srv
+  UpdatePosition.srv
+  UpdateURI.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -25,10 +25,10 @@ find_package(catkin REQUIRED roscpp rospy std_msgs geometry_msgs sensor_msgs mes
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs  # Or other packages containing msgs
+)
 
 catkin_package(
 #  INCLUDE_DIRS include
@@ -44,3 +44,6 @@ include_directories(
 
 add_executable(turtlebot3_drive_node src/turtlebot3_drive.cpp)
 target_link_libraries(turtlebot3_drive_node ${catkin_LIBRARIES})
+
+add_executable(robot_manager_node src/robot_manager_node.cpp)
+target_link_libraries(robot_manager_node ${catkin_LIBRARIES})
