added hospitality_msgs package

--- a/hospitality_server/CMakeLists.txt
+++ b/hospitality_server/CMakeLists.txt
@@ -11,6 +11,10 @@ find_package(
   message_generation
 )
 
+find_package(
+  Eigen3 REQUIRED
+)
+
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
