implementing repulsive controller

--- a/hospitality_msgs/CMakeLists.txt
+++ b/hospitality_msgs/CMakeLists.txt
@@ -22,14 +22,16 @@ find_package(
 add_message_files(
   FILES
   Waypoint.msg
+  PointFloor.msg
 )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  FindRoute.srv
+  UpdatePosition.srv
+  UpdateURI.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
