--- a/hospitality_server/CMakeLists.txt
+++ b/hospitality_server/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(
   std_msgs
   geometry_msgs
   sensor_msgs
-  message_generation
+  hospitality_msgs
 )
 
 find_package(
@@ -16,18 +16,18 @@ find_package(
 )
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  PointFloor.msg
-)
+# add_message_files(
+#   FILES
+#   PointFloor.msg
+# )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  FindRoute.srv
-  UpdatePosition.srv
-  UpdateURI.srv
-)
+# add_service_files(
+#   FILES
+#   FindRoute.srv
+#   UpdatePosition.srv
+#   UpdateURI.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -37,10 +37,10 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs  # Or other packages containing msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+# )
 
 catkin_package(
 #  INCLUDE_DIRS include
@@ -53,9 +53,6 @@ include_directories(
     include
     ${catkin_INCLUDE_DIRS}
 )
-
-add_executable(turtlebot3_drive_node src/turtlebot3_drive.cpp)
-target_link_libraries(turtlebot3_drive_node ${catkin_LIBRARIES})
 
 add_executable(robot_info_node src/robot_info_node.cpp)
 target_link_libraries(robot_info_node ${catkin_LIBRARIES})
